Generics_Super_Extend_WildCard/Code4_error_report.txt
javac errors for Code4.java 
Code4.java:18: error: method baz in class Code4 cannot be applied to given types;
        List<Integer> ret = baz(mt,ms);
                            ^
  required: Map<T,? super T>,S
  found: Map<Object,Number>,Map<Number,String>
  reason: inference variable T has incompatible bounds
    equality constraints: Object
    upper bounds: Number,Object
  where T,S are type-variables:
    T extends Object declared in method <T,S>baz(Map<T,? super T>,S)
    S extends Map<Number,T> declared in method <T,S>baz(Map<T,? super T>,S)
1 error
 
============================================================================= 
ExtendJ errors for Code4.java 
C:\Users\Abeer Faiz Farid\Desktop\MSc Software Engineering\Semester 3\JavaTypeErrorBenchmarks\Generics_Super_Extend_WildCard\Code4.java:18: error: no method named baz(java.util.Map<java.lang.Object, java.lang.Number>, java.util.Map<java.lang.Number, java.lang.String>) in Generics_Super_Extend_WildCard.Code4 matches. However, there is a method baz(java.util.Map<T, ? super T>, Generics_Super_Extend_WildCard.Code4.baz(java.util.Map, java.util.Map)@S)
 
============================================================================= 
Eclipse ECJ errors for Code4.java 
----------
1. ERROR in C:\Users\Abeer Faiz Farid\Desktop\MSc Software Engineering\Semester 3\JavaTypeErrorBenchmarks\Generics_Super_Extend_WildCard\Code4.java (at line 18)
	List<Integer> ret = baz(mt,ms);
	                    ^^^
The method baz(Map<T,? super T>, S) in the type Code4 is not applicable for the arguments (Map<Object,Number>, Map<Number,String>)
----------
1 problem (1 error)
